--- a/appengine/cron.yaml
+++ b/appengine/cron.yaml
@@ -1,4 +1,8 @@
 cron:
+- description: Push a "tick" onto pubsub every minutes
+  url: /publish
+  schedule: every 1 minutes
+
 - description: Push a "tick" onto pubsub every hour
   url: /publish/hourly-tick
   schedule: every 1 hours
