--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,17 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "engines": { 
-    "node": "8" 
+  "engines": {
+    "node": "8"
   },
   "dependencies": {
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "serve": "firebase serve --only functions -P firestore-backup-233306",
+    "deploy": "firebase deploy --only functions -P firestore-backup-233306",
+    "logs": "firebase functions:log"
+  }
 }
